gcc/testsuite/rust/rustc/ui/parser/new-unicode-escapes-4.rs
pub fn main() {
    let s = "\u{lol}";
// { dg-error "" "" { target *-*-* } .-1 }
}

